Fixed text alignment due to new min width breakpoints

--- a/css/style.css
+++ b/css/style.css
@@ -142,18 +142,27 @@ a {
     }
 }
 @media (min-width: 992px) {
+	#about {
+		text-align: justify;
+	}
     .circle {
         height: 9em;
         width: 9em;
     }
 }
 @media(min-width: 1200px) {
+	#about {
+		text-align: justify;
+	}
     .circle {
         height: 11em;
         width: 11em;
     }
 }
 @media(min-width: 1920px) {
+	#about {
+		text-align: justify;
+	}
     .circle {
         height: 13em;
         width: 13em;
